--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BB Starter",
+  "name": "bbstarter",
   "author": "Madhusudhan Srinivasa <madhums8@gmail.com> (http://twitter.com/madhums)",
   "description": "Backbone bootstrap starter",
   "version": "0.0.1",
